--- a/App07_Frag/app/src/main/res/layout/activity_main_color_change.xml
+++ b/App07_Frag/app/src/main/res/layout/activity_main_color_change.xml
@@ -5,25 +5,24 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivityColorChange">
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fragmentContainerView"
-        android:name="com.example.app07_frag.SenderFragment"
+        android:name="com.example.app07_frag.ColorChangeSenderFragment"
         android:layout_width="0dp"
-        android:layout_height="300dp"
+        android:layout_height="100dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.51"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fragmentContainerView2"
-        android:name="com.example.app07_frag.ReceiverFragment"
+        android:name="com.example.app07_frag.ColorChangeReceiverFragment"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fragmentContainerView" />
+        app:layout_constraintTop_toBottomOf="@+id/fragmentContainerView"  />
 </androidx.constraintlayout.widget.ConstraintLayout>
