기능 별 패키지 생성

--- a/app04_intent/app/src/main/res/layout/activity_main.xml
+++ b/app04_intent/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:id="@+id/main"
     android:orientation="vertical"
-    tools:context=".MainActivity"
+    tools:context=".sub.MainActivity"
     android:gravity="center_vertical">
 
     <EditText
