--- a/app04_intent/app/src/main/res/layout/activity_main3.xml
+++ b/app04_intent/app/src/main/res/layout/activity_main3.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center_horizontal"
-    tools:context=".MainActivity3">
+    tools:context=".dialog.MainActivity3">
     <Button
         android:id="@+id/openDialog"
         android:layout_width="match_parent"
