--- a/app04_intent/app/src/main/res/layout/activity_main_activity2_recycler.xml
+++ b/app04_intent/app/src/main/res/layout/activity_main_activity2_recycler.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
-    tools:context=".MainActivity2_recycler">
+    tools:context=".recycler.MainActivity2_recycler">
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="0dp"
