--- a/app04_intent/app/src/main/res/layout/activity2_input.xml
+++ b/app04_intent/app/src/main/res/layout/activity2_input.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity2_Input">
+    tools:context=".InputOutput.MainActivity2_Input">
 
     <TextView
         android:id="@+id/textView"
