패키지 경로 수정

--- a/App05/app/src/main/res/layout/activity5_person.xml
+++ b/App05/app/src/main/res/layout/activity5_person.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity5_person">
+    tools:context=".personRecycler.MainActivity5_person">
 
     <Button
         android:id="@+id/btnList"
