--- a/App07/app/src/main/res/layout/fragment__artist.xml
+++ b/App07/app/src/main/res/layout/fragment__artist.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#93BA81"
-    tools:context=".Fragment_Artist">
+    tools:context=".musicFragment.Fragment_Artist">
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
