--- a/App07/app/src/main/res/layout/fragment_detail.xml
+++ b/App07/app/src/main/res/layout/fragment_detail.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical"
     android:gravity="center_horizontal"
     android:padding="10dp"
-    tools:context=".DetailFragment">
+    tools:context=".fragment.DetailFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
