--- a/App10_member/app/src/main/res/layout/activity_main_update.xml
+++ b/App10_member/app/src/main/res/layout/activity_main_update.xml
@@ -10,6 +10,7 @@
     android:background="@color/white"
     tools:context=".MainActivity_Update">
     <TextView
+        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
